--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,28 +1,75 @@
 <!DOCTYPE html>
 <html lang="pl">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Firma Budowlana</title>
-    <meta name="description" content="Your project description" />
-    <!-- Title -->
-    <meta property="og:title" content="Firma Budowlana" />
-    <!-- OPTIONAL description. 2-4 sentences. -->
-    <meta property="og:description" content="Firma Budowlana" />
-    <!-- full url with http(s) ie. https://.github.io/my-repo/ -->
-    <meta property="og:url" content="" />
-    <!-- full url to the image with http(s) ie. https://.github.io/my-repo/assets/img/fb.png. Facebook suggests at least 1200 x 630. -->
-    <meta
-      property="og:image"
-      content=""
-    />
-  </head>
-  <body>
-    <header>
 
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Firma Budowlana</title>
+  <meta name="description" content="Your project description" />
+  <!-- Title -->
+  <meta property="og:title" content="Firma Budowlana" />
+  <!-- OPTIONAL description. 2-4 sentences. -->
+  <meta property="og:description" content="Firma Budowlana" />
+  <!-- full url with http(s) ie. https://.github.io/my-repo/ -->
+  <meta property="og:url" content="" />
+  <!-- full url to the image with http(s) ie. https://.github.io/my-repo/assets/img/fb.png. Facebook suggests at least 1200 x 630. -->
+  <meta property="og:image" content="" />
+</head>
+
+<body>
+  <main>
+    <header>
+      <div class="hero">
+        <div class="hero__header">
+          <img src="../assets/img/logo.svg" alt="" class="logo">
+          <div class="hero__information">
+            <div class="hero__information--item">
+              <p>Adres</p>
+              <span>23-420 Tarnogród</span>
+            </div>
+            <div class="hero__information--item">
+              <p>Telefon</p>
+              <span>123 456 789</span>
+            </div>
+            <div class="hero__information--item">
+              <p>E-mail</p>
+              <span>budowa@szybka.pl</span>
+            </div>
+          </div>
+        </div>
+        <img src="../assets/img/hero-img.png" alt="">
+      </div>
+
+      <nav class="navigation">
+        <ul class="navigation__list">
+          <li class="navigation__list--item">
+            <a class="link" href="">STRONA GŁÓWNA</a>
+          </li>
+          <li class="navigation__list--item">
+            <a class="link" href="">O NAS</a>
+          </li>
+          <li class="navigation__list--item">
+            <a class="link" href="">GALERIA</a>
+          </li>
+          <li class="navigation__list--item">
+            <a class="link" href="">OFERTA</a>
+          </li>
+          <li class="navigation__list--item">
+            <a class="link" href="">CENNIK</a>
+          </li>
+          <li class="navigation__list--item">
+            <a class="link" href="">STRONA GŁÓWNA</a>
+          </li>
+        </ul>
+      </nav>
     </header>
-    <main>
-      
-    </main>
-  </body>
+
+    <section>
+      <article class="about">
+        
+      </article>
+    </section>
+  </main>
+</body>
+
 </html>
