--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -66,10 +66,113 @@
 
     <section>
       <article class="about">
-        
+        <h2>O nas</h2>
+        <p>Bla bla bla działamy na rynku itp. jest git nawet ten teges. BudJanusz to firma remontowo-budowlana. Zajmujemy się kompleksowymi wykończeniami mieszkań, domów, lokali biurowych oraz remontowaniem i adaptacją pomieszczeń takich jak poddasza, piwnice oraz sutereny.
+        </p>
+        <p>Prace naszej firmy obejmują budynki mieszkalne - zarówno mieszkania, domy jednorodzinne, a także wnętrza użytkowe przeznaczone pod sklepy, biura, magazyny czy miejsca wypoczynku. Realizujemy zlecenia osób prywatnych, a także firm i innych instytucji.
+        </p>
+        <p>Dbamy o dobry kontakt z klientem i staramy się każdemu dać pewność fachowo wykonanych usług.
+        </p>
+        <p>Każde zlecenie traktujemy indywidualnie starając się dotrzymać terminów zawartych w umowie z klientem.
+        </p>
+        <p>Oprócz prac budowlano-wykończeniowych oferujemy państwu pomoc przy skręcaniu-montażu mebli, usługi transportowe oraz sprzątanie.</p>
+      </article>
+
+      <article>
+        <div>
+          <h3>Łazienka</h3>
+          <p>Łazienka w każdym domu to miejsce szczególne - w niej bowiem rozpoczynamy i kończymy dzień. Chcemy więc, aby jej wnętrze miało klimat dodający nam rano energii na cały dzień, a wieczorem zapewniało relaks przed snem.
+          </p>
+        </div>
+        <div>
+          <h3>Kuchnia</h3>
+          <p>Wspaniała kuchnia to znacznie więcej niż kolejne pomieszczenie - może być sercem każdego domu. Kuchnia powinna być nie tylko piękna ale i funkcjonalna.
+          </p>
+        </div>
+        <div>
+          <h3>Pokój</h3>
+          <p>Pomysłów na urządzanie pokoju jest bardzo wiele, jednak nie zawsze potrafimy przewidzieć, czy wybrane meble, podłogi czy dodatki będą nam się zawsze podobać
+          </p>
+        </div>
       </article>
     </section>
+
+    <section>
+      <h2>Zobacz nasze prace</h2>
+      <div>
+        <ul>
+          <li>
+            <a href="">NASZA OFERTA</a>
+          </li>
+          <li>
+            <a href="">WYCENA</a>
+          </li>
+        </ul>
+      </div>
+    </section>
+
+    <section class="photos-section">
+      <div class="photos-section__item">
+        <img src="../assets/img/img1.png" alt="">
+        <p photos-section__description>Lorem ipsum dolor sit amet.</p>
+      </div>
+      <div class="photos-section__item">
+        <img src="../assets/img/img2.png" alt="">
+        <p photos-section__description>Lorem ipsum dolor sit amet.</p>
+      </div>
+      <div class="photos-section__item">
+        <img src="../assets/img/img3.png" alt="">
+        <p photos-section__description>Lorem ipsum dolor sit amet.</p>
+      </div>
+      <div class="photos-section__item">
+        <img src="../assets/img/img4.png" alt="">
+        <p photos-section__description>Lorem ipsum dolor sit amet.</p>
+      </div>
+      <div class="photos-section__item">
+        <img src="../assets/img/img5.png" alt="">
+        <p photos-section__description>Lorem ipsum dolor sit amet.</p>
+      </div>
+      <div class="photos-section__item">
+        <img src="../assets/img/img6.png" alt="">
+        <p photos-section__description>Lorem ipsum dolor sit amet.</p>
+      </div>
+    </section>
+
+    <section class="opinions">
+      <h2>Opinie</h2>
+      <div>
+        
+      </div>
+    </section>
+
+    <section class="map">
+
+    </section>
+
+    <section class="contact">
+      <div class="hero__information--item">
+        <p>Adres</p>
+        <span>23-420 Tarnogród</span>
+      </div>
+      <div class="hero__information--item">
+        <p>Telefon</p>
+        <span>123 456 789</span>
+      </div>
+      <div class="hero__information--item">
+        <p>E-mail</p>
+        <span>budowa@szybka.pl</span>
+      </div>
+    </section>
   </main>
+
+  <footer>
+    <span>
+      Made by Mikele Andżelo
+    </span>
+    <span>
+      Projekt i wykonanie: też mikele
+    </span>
+  </footer>
 </body>
 
 </html>
