feat: part of menu

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -41,9 +41,10 @@
       </div>
 
       <nav class="navigation">
+        <div class="navigation__container">
         <ul class="navigation__list">
           <li class="navigation__list--item">
-            <a class="link" href="">STRONA GŁÓWNA</a>
+            <a class="link link__main" href="">STRONA GŁÓWNA</a>
           </li>
           <li class="navigation__list--item">
             <a class="link" href="">O NAS</a>
@@ -58,9 +59,10 @@
             <a class="link" href="">CENNIK</a>
           </li>
           <li class="navigation__list--item">
-            <a class="link" href="">STRONA GŁÓWNA</a>
+            <a class="link" href="">KONTAKT</a>
           </li>
         </ul>
+      </div>
       </nav>
     </header>
 
