--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -37,13 +37,15 @@
             </div>
           </div>
         </div>
-        <img src="../assets/img/hero-img.png" alt="">
+        <div class="hero-img__container">
+        <img class="hero-img" src="../assets/img/hero-img.png" alt="">
+      </div>
       </div>
 
       <nav class="navigation">
         <div class="navigation__container">
         <ul class="navigation__list">
-          <li class="navigation__list--item">
+          <li class="navigation__list--item navigation__list--main">
             <a class="link link__main" href="">STRONA GŁÓWNA</a>
           </li>
           <li class="navigation__list--item">
