feat: hero informations

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -23,79 +23,97 @@
         <div class="hero__header">
           <img src="../assets/img/logo.svg" alt="" class="logo">
           <div class="hero__information">
-            <div class="hero__information--item">
-              <p>Adres</p>
-              <span>23-420 Tarnogród</span>
+            <div class="hero__information--items">
+              <img class="hero__information--icon" src="/src/assets/img/home.svg" alt="home icon">
+              <div class="hero__information--item">
+                <p class="hero__information--item-heading">Adres</p>
+                <span>23-420 Tarnogród</span>
+              </div>
             </div>
-            <div class="hero__information--item">
-              <p>Telefon</p>
-              <span>123 456 789</span>
+            <div class="hero__information--items">
+              <img class="hero__information--icon" src="/src/assets/img/phone.svg" alt="">
+              <div class="hero__information--item ">
+                <p class="hero__information--item-heading">Telefon</p>
+                <span>123 456 789</span>
+              </div>
             </div>
-            <div class="hero__information--item">
-              <p>E-mail</p>
-              <span>budowa@szybka.pl</span>
+            <div class="hero__information--items">
+              <img class="hero__information--icon" src="/src/assets/img/mail.svg" alt="">
+              <div class="hero__information--item ">
+                <p class="hero__information--item-heading">E-mail</p>
+                <span>budowa@szybka.pl</span>
+              </div>
             </div>
           </div>
         </div>
         <div class="hero-img__container">
-        <img class="hero-img" src="../assets/img/hero-img.png" alt="">
-      </div>
+          <img class="hero-img" src="../assets/img/hero-img.png" alt="">
+        </div>
       </div>
 
       <nav class="navigation">
         <div class="navigation__container">
-        <ul class="navigation__list">
-          <li class="navigation__list--item navigation__list--main">
-            <a class="link link__main" href="">STRONA GŁÓWNA</a>
-          </li>
-          <li class="navigation__list--item">
-            <a class="link" href="">O NAS</a>
-          </li>
-          <li class="navigation__list--item">
-            <a class="link" href="">GALERIA</a>
-          </li>
-          <li class="navigation__list--item">
-            <a class="link" href="">OFERTA</a>
-          </li>
-          <li class="navigation__list--item">
-            <a class="link" href="">CENNIK</a>
-          </li>
-          <li class="navigation__list--item">
-            <a class="link" href="">KONTAKT</a>
-          </li>
-        </ul>
-      </div>
+          <ul class="navigation__list">
+            <li class="navigation__list--item navigation__list--main">
+              <a class="link link__main" href="">STRONA GŁÓWNA</a>
+            </li>
+            <li class="navigation__list--item">
+              <a class="link" href="">O NAS</a>
+            </li>
+            <li class="navigation__list--item">
+              <a class="link" href="">GALERIA</a>
+            </li>
+            <li class="navigation__list--item">
+              <a class="link" href="">OFERTA</a>
+            </li>
+            <li class="navigation__list--item">
+              <a class="link" href="">CENNIK</a>
+            </li>
+            <li class="navigation__list--item">
+              <a class="link" href="">KONTAKT</a>
+            </li>
+          </ul>
+        </div>
       </nav>
     </header>
 
     <section>
       <article class="about">
         <h2>O nas</h2>
-        <p>Bla bla bla działamy na rynku itp. jest git nawet ten teges. BudJanusz to firma remontowo-budowlana. Zajmujemy się kompleksowymi wykończeniami mieszkań, domów, lokali biurowych oraz remontowaniem i adaptacją pomieszczeń takich jak poddasza, piwnice oraz sutereny.
+        <p>Bla bla bla działamy na rynku itp. jest git nawet ten teges. BudJanusz to firma remontowo-budowlana.
+          Zajmujemy się kompleksowymi wykończeniami mieszkań, domów, lokali biurowych oraz remontowaniem i adaptacją
+          pomieszczeń takich jak poddasza, piwnice oraz sutereny.
         </p>
-        <p>Prace naszej firmy obejmują budynki mieszkalne - zarówno mieszkania, domy jednorodzinne, a także wnętrza użytkowe przeznaczone pod sklepy, biura, magazyny czy miejsca wypoczynku. Realizujemy zlecenia osób prywatnych, a także firm i innych instytucji.
+        <p>Prace naszej firmy obejmują budynki mieszkalne - zarówno mieszkania, domy jednorodzinne, a także wnętrza
+          użytkowe przeznaczone pod sklepy, biura, magazyny czy miejsca wypoczynku. Realizujemy zlecenia osób
+          prywatnych, a także firm i innych instytucji.
         </p>
         <p>Dbamy o dobry kontakt z klientem i staramy się każdemu dać pewność fachowo wykonanych usług.
         </p>
         <p>Każde zlecenie traktujemy indywidualnie starając się dotrzymać terminów zawartych w umowie z klientem.
         </p>
-        <p>Oprócz prac budowlano-wykończeniowych oferujemy państwu pomoc przy skręcaniu-montażu mebli, usługi transportowe oraz sprzątanie.</p>
+        <p>Oprócz prac budowlano-wykończeniowych oferujemy państwu pomoc przy skręcaniu-montażu mebli, usługi
+          transportowe oraz sprzątanie.</p>
       </article>
 
       <article>
         <div>
           <h3>Łazienka</h3>
-          <p>Łazienka w każdym domu to miejsce szczególne - w niej bowiem rozpoczynamy i kończymy dzień. Chcemy więc, aby jej wnętrze miało klimat dodający nam rano energii na cały dzień, a wieczorem zapewniało relaks przed snem.
+          <p>Łazienka w każdym domu to miejsce szczególne - w niej bowiem rozpoczynamy i kończymy dzień. Chcemy więc,
+            aby jej wnętrze miało klimat dodający nam rano energii na cały dzień, a wieczorem zapewniało relaks przed
+            snem.
           </p>
         </div>
         <div>
           <h3>Kuchnia</h3>
-          <p>Wspaniała kuchnia to znacznie więcej niż kolejne pomieszczenie - może być sercem każdego domu. Kuchnia powinna być nie tylko piękna ale i funkcjonalna.
+          <p>Wspaniała kuchnia to znacznie więcej niż kolejne pomieszczenie - może być sercem każdego domu. Kuchnia
+            powinna być nie tylko piękna ale i funkcjonalna.
           </p>
         </div>
         <div>
           <h3>Pokój</h3>
-          <p>Pomysłów na urządzanie pokoju jest bardzo wiele, jednak nie zawsze potrafimy przewidzieć, czy wybrane meble, podłogi czy dodatki będą nam się zawsze podobać
+          <p>Pomysłów na urządzanie pokoju jest bardzo wiele, jednak nie zawsze potrafimy przewidzieć, czy wybrane
+            meble, podłogi czy dodatki będą nam się zawsze podobać
           </p>
         </div>
       </article>
@@ -145,7 +163,7 @@
     <section class="opinions">
       <h2>Opinie</h2>
       <div>
-        
+
       </div>
     </section>
 
