feat: information-section

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -77,44 +77,56 @@
       </nav>
     </header>
 
-    <section>
+    <section class="information-section">
       <article class="about">
-        <h2>O nas</h2>
-        <p>Bla bla bla działamy na rynku itp. jest git nawet ten teges. BudJanusz to firma remontowo-budowlana.
-          Zajmujemy się kompleksowymi wykończeniami mieszkań, domów, lokali biurowych oraz remontowaniem i adaptacją
-          pomieszczeń takich jak poddasza, piwnice oraz sutereny.
-        </p>
-        <p>Prace naszej firmy obejmują budynki mieszkalne - zarówno mieszkania, domy jednorodzinne, a także wnętrza
-          użytkowe przeznaczone pod sklepy, biura, magazyny czy miejsca wypoczynku. Realizujemy zlecenia osób
-          prywatnych, a także firm i innych instytucji.
-        </p>
-        <p>Dbamy o dobry kontakt z klientem i staramy się każdemu dać pewność fachowo wykonanych usług.
-        </p>
-        <p>Każde zlecenie traktujemy indywidualnie starając się dotrzymać terminów zawartych w umowie z klientem.
-        </p>
-        <p>Oprócz prac budowlano-wykończeniowych oferujemy państwu pomoc przy skręcaniu-montażu mebli, usługi
-          transportowe oraz sprzątanie.</p>
+        <h2 class="article-head">O nas</h2>
+        <img src="/src/assets/img/pasek.svg" alt="">
+        <div class="article-container">
+          <p class="about__paragraph">Bla bla bla działamy na rynku itp. jest git nawet ten teges. BudJanusz to firma
+            remontowo-budowlana.
+            Zajmujemy się kompleksowymi wykończeniami mieszkań, domów, lokali biurowych oraz remontowaniem i adaptacją
+            pomieszczeń takich jak poddasza, piwnice oraz sutereny.
+          </p>
+          <p class="about__paragraph">Prace naszej firmy obejmują budynki mieszkalne - zarówno mieszkania, domy
+            jednorodzinne, a także wnętrza
+            użytkowe przeznaczone pod sklepy, biura, magazyny czy miejsca wypoczynku. Realizujemy zlecenia osób
+            prywatnych, a także firm i innych instytucji.
+          </p>
+          <p class="about__paragraph">Dbamy o dobry kontakt z klientem i staramy się każdemu dać pewność fachowo
+            wykonanych usług.
+          </p>
+          <p class="about__paragraph">Każde zlecenie traktujemy indywidualnie starając się dotrzymać terminów zawartych
+            w umowie z klientem.
+          </p>
+          <p class="about__paragraph">Oprócz prac budowlano-wykończeniowych oferujemy państwu pomoc przy
+            skręcaniu-montażu mebli, usługi
+            transportowe oraz sprzątanie.</p>
+        </div>
       </article>
 
       <article>
-        <div>
-          <h3>Łazienka</h3>
-          <p>Łazienka w każdym domu to miejsce szczególne - w niej bowiem rozpoczynamy i kończymy dzień. Chcemy więc,
-            aby jej wnętrze miało klimat dodający nam rano energii na cały dzień, a wieczorem zapewniało relaks przed
-            snem.
-          </p>
-        </div>
-        <div>
-          <h3>Kuchnia</h3>
-          <p>Wspaniała kuchnia to znacznie więcej niż kolejne pomieszczenie - może być sercem każdego domu. Kuchnia
-            powinna być nie tylko piękna ale i funkcjonalna.
-          </p>
-        </div>
-        <div>
-          <h3>Pokój</h3>
-          <p>Pomysłów na urządzanie pokoju jest bardzo wiele, jednak nie zawsze potrafimy przewidzieć, czy wybrane
-            meble, podłogi czy dodatki będą nam się zawsze podobać
-          </p>
+        <h2 class="article-head">Remonty</h2>
+        <img src="/src/assets/img/pasek.svg" alt="">
+        <div class="article-container">
+          <div class="article-item">
+            <h3 class="article__space">Łazienka</h3>
+            <p class="article__description">Łazienka w każdym domu to miejsce szczególne - w niej bowiem rozpoczynamy i kończymy dzień. Chcemy więc,
+              aby jej wnętrze miało klimat dodający nam rano energii na cały dzień, a wieczorem zapewniało relaks przed
+              snem.
+            </p>
+          </div>
+          <div class="article-item">
+            <h3 class="article__space">Kuchnia</h3>
+            <p class="article__description">Wspaniała kuchnia to znacznie więcej niż kolejne pomieszczenie - może być sercem każdego domu. Kuchnia
+              powinna być nie tylko piękna ale i funkcjonalna.
+            </p>
+          </div>
+          <div class="article-item">
+            <h3 class="article__space">Pokój</h3>
+            <p class="article__description">Pomysłów na urządzanie pokoju jest bardzo wiele, jednak nie zawsze potrafimy przewidzieć, czy wybrane
+              meble, podłogi czy dodatki będą nam się zawsze podobać
+            </p>
+          </div>
         </div>
       </article>
     </section>
