feat: check-section

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -82,7 +82,7 @@
         <h2 class="article-head">O nas</h2>
         <img src="/src/assets/img/pasek.svg" alt="">
         <div class="article-container">
-          <p class="about__paragraph">Bla bla bla działamy na rynku itp. jest git nawet ten teges. BudJanusz to firma
+          <p class="about__paragraph">Bla bla bla działamy na rynku legancko tego. BudJanusz to firma
             remontowo-budowlana.
             Zajmujemy się kompleksowymi wykończeniami mieszkań, domów, lokali biurowych oraz remontowaniem i adaptacją
             pomieszczeń takich jak poddasza, piwnice oraz sutereny.
@@ -110,20 +110,23 @@
         <div class="article-container">
           <div class="article-item">
             <h3 class="article__space">Łazienka</h3>
-            <p class="article__description">Łazienka w każdym domu to miejsce szczególne - w niej bowiem rozpoczynamy i kończymy dzień. Chcemy więc,
+            <p class="article__description">Łazienka w każdym domu to miejsce szczególne - w niej bowiem rozpoczynamy i
+              kończymy dzień. Chcemy więc,
               aby jej wnętrze miało klimat dodający nam rano energii na cały dzień, a wieczorem zapewniało relaks przed
               snem.
             </p>
           </div>
           <div class="article-item">
             <h3 class="article__space">Kuchnia</h3>
-            <p class="article__description">Wspaniała kuchnia to znacznie więcej niż kolejne pomieszczenie - może być sercem każdego domu. Kuchnia
+            <p class="article__description">Wspaniała kuchnia to znacznie więcej niż kolejne pomieszczenie - może być
+              sercem każdego domu. Kuchnia
               powinna być nie tylko piękna ale i funkcjonalna.
             </p>
           </div>
           <div class="article-item">
             <h3 class="article__space">Pokój</h3>
-            <p class="article__description">Pomysłów na urządzanie pokoju jest bardzo wiele, jednak nie zawsze potrafimy przewidzieć, czy wybrane
+            <p class="article__description">Pomysłów na urządzanie pokoju jest bardzo wiele, jednak nie zawsze potrafimy
+              przewidzieć, czy wybrane
               meble, podłogi czy dodatki będą nam się zawsze podobać
             </p>
           </div>
@@ -131,17 +134,19 @@
       </article>
     </section>
 
-    <section>
-      <h2>Zobacz nasze prace</h2>
-      <div>
-        <ul>
-          <li>
-            <a href="">NASZA OFERTA</a>
-          </li>
-          <li>
-            <a href="">WYCENA</a>
-          </li>
-        </ul>
+    <section class="check">
+      <div class="check__container">
+        <h2 class="check__head">Zobacz nasze prace</h2>
+        <div>
+          <ul class="check__list">
+            <li class="check__list--item1">
+              <a class="check__list--link" href="">NASZA OFERTA</a>
+            </li>
+            <li class="check__list--item2">
+              <a class="check__list--link" href="">WYCENA</a>
+            </li>
+          </ul>
+        </div>
       </div>
     </section>
 
