feat: photos-section

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -153,27 +153,27 @@
     <section class="photos-section">
       <div class="photos-section__item">
         <img src="../assets/img/img1.png" alt="">
-        <p photos-section__description>Lorem ipsum dolor sit amet.</p>
+        <p class="photos-section__description">Lorem ipsum dolor sit amet.</p>
       </div>
       <div class="photos-section__item">
         <img src="../assets/img/img2.png" alt="">
-        <p photos-section__description>Lorem ipsum dolor sit amet.</p>
+        <p class="photos-section__description">Lorem ipsum dolor sit amet.</p>
       </div>
       <div class="photos-section__item">
         <img src="../assets/img/img3.png" alt="">
-        <p photos-section__description>Lorem ipsum dolor sit amet.</p>
+        <p class="photos-section__description">Lorem ipsum dolor sit amet.</p>
       </div>
       <div class="photos-section__item">
         <img src="../assets/img/img4.png" alt="">
-        <p photos-section__description>Lorem ipsum dolor sit amet.</p>
+        <p class="photos-section__description">Lorem ipsum dolor sit amet.</p>
       </div>
       <div class="photos-section__item">
         <img src="../assets/img/img5.png" alt="">
-        <p photos-section__description>Lorem ipsum dolor sit amet.</p>
+        <p class="photos-section__description">Lorem ipsum dolor sit amet.</p>
       </div>
       <div class="photos-section__item">
         <img src="../assets/img/img6.png" alt="">
-        <p photos-section__description>Lorem ipsum dolor sit amet.</p>
+        <p class="photos-section__description">Lorem ipsum dolor sit amet.</p>
       </div>
     </section>
 
