--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -184,8 +184,12 @@
       </div>
     </section>
 
-    <section class="map">
-
+    <section class="localization">
+      <h2 class="localization__head">Pewnie zastanawiasz się gdzie nas znaleźć ;)</h2>
+      <img class="localization__line" src="/src/assets/img/Line5.svg" alt="">
+      <iframe class="localization__map"
+        src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d6994.084690030229!2d22.7379766647145!3d50.36207183125831!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spl!2spl!4v1597950352451!5m2!1spl!2spl"
+        frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
     </section>
 
     <section class="contact">
