--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -24,21 +24,21 @@
           <img src="../assets/img/logo.svg" alt="" class="logo">
           <div class="hero__information">
             <div class="hero__information--items">
-              <img class="hero__information--icon" src="/src/assets/img/home.svg" alt="home icon">
+              <img class="hero__information--icon" src="../assets/img/home.svg" alt="home icon">
               <div class="hero__information--item">
                 <p class="hero__information--item-heading">Adres</p>
                 <span>23-420 Tarnogród</span>
               </div>
             </div>
             <div class="hero__information--items">
-              <img class="hero__information--icon" src="/src/assets/img/phone.svg" alt="">
+              <img class="hero__information--icon" src="../assets/img/phone.svg" alt="">
               <div class="hero__information--item ">
                 <p class="hero__information--item-heading">Telefon</p>
                 <span>123 456 789</span>
               </div>
             </div>
             <div class="hero__information--items">
-              <img class="hero__information--icon" src="/src/assets/img/mail.svg" alt="">
+              <img class="hero__information--icon" src="../assets/img/mail.svg" alt="">
               <div class="hero__information--item ">
                 <p class="hero__information--item-heading">E-mail</p>
                 <span>budowa@szybka.pl</span>
@@ -80,7 +80,7 @@
     <section class="information-section">
       <article class="about">
         <h2 class="article-head">O nas</h2>
-        <img src="/src/assets/img/pasek.svg" alt="">
+        <img src="../assets/img/pasek.svg" alt="">
         <div class="article-container">
           <p class="about__paragraph">Bla bla bla działamy na rynku legancko tego. BudJanusz to firma
             remontowo-budowlana.
@@ -106,7 +106,7 @@
 
       <article>
         <h2 class="article-head">Remonty</h2>
-        <img src="/src/assets/img/pasek.svg" alt="">
+        <img src="../assets/img/pasek.svg" alt="">
         <div class="article-container">
           <div class="article-item">
             <h3 class="article__space">Łazienka</h3>
@@ -186,24 +186,33 @@
 
     <section class="localization">
       <h2 class="localization__head">Pewnie zastanawiasz się gdzie nas znaleźć ;)</h2>
-      <img class="localization__line" src="/src/assets/img/Line5.svg" alt="">
+      <img class="localization__line" src="../assets/img/Line5.svg" alt="">
       <iframe class="localization__map"
         src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d6994.084690030229!2d22.7379766647145!3d50.36207183125831!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spl!2spl!4v1597950352451!5m2!1spl!2spl"
         frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
     </section>
 
     <section class="contact">
-      <div class="hero__information--item">
-        <p>Adres</p>
-        <span>23-420 Tarnogród</span>
+      <div class="hero__information--items">
+        <img class="hero__information--icon" src="../assets/img/home.svg" alt="home icon">
+        <div class="hero__information--item">
+          <p class="hero__information--item-heading">Adres</p>
+          <span>23-420 Tarnogród</span>
+        </div>
       </div>
-      <div class="hero__information--item">
-        <p>Telefon</p>
-        <span>123 456 789</span>
+      <div class="hero__information--items">
+        <img class="hero__information--icon" src="../assets/img/phone.svg" alt="">
+        <div class="hero__information--item ">
+          <p class="hero__information--item-heading">Telefon</p>
+          <span>123 456 789</span>
+        </div>
       </div>
-      <div class="hero__information--item">
-        <p>E-mail</p>
-        <span>budowa@szybka.pl</span>
+      <div class="hero__information--items">
+        <img class="hero__information--icon" src="../assets/img/mail.svg" alt="">
+        <div class="hero__information--item ">
+          <p class="hero__information--item-heading">E-mail</p>
+          <span>budowa@szybka.pl</span>
+        </div>
       </div>
     </section>
   </main>
