feat: opinion-section

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -178,9 +178,27 @@
     </section>
 
     <section class="opinions">
-      <h2>Opinie</h2>
-      <div>
-
+      <h2 class="opinions__head">Opinie</h2>
+      <div class="opinions__elements">
+        <div class="opinions__item opinions__item-1">
+          <p class="opinion-1">Rekomendujemy firmę jako solidną, wiarygodną, terminową w branży budowlanej. Doświadczona
+            kadra oraz potencjał techniczny i organizacyjny gwarantują wysoki poziom wykonania usługi. Firma BudJanusz
+            Budownictwo jest godna polecenia przy realizacji tego typu prac.</p>
+            <p class="opinion-writer">Wspólnota Mieszkaniowa Nieruchomości</p>
+        </div>
+        <div class="opinions__item opinions__item-2">
+          <p class="opinion-2">Mieliśmy przyjemność współpracować z Firmą Budowalną BudJanusz. Zakres prac obejmował
+            renowację i modernizację magazynów, zaplecza, kuchni oraz sali konsumpcyjnych w naszej Restauracji w
+            kamienicy nr 55 na Starym Rynku w Poznaniu. W związku z powyższym możemy szczerze polecić Firmę BudJanusz
+            jako rzetelnego kontrahenta.</p>
+            <p class="opinion-writer">Restauracja Smacznie Rzeszów</p>
+        </div>
+        <div class="opinions__item opinions__item-3">
+          <p class="opinion-3">Firma Budowlana Janusza wykonała dla nas dom jednorodzinny. Wszystkie prace wykonana
+            fachowo i terminowo. Podczas odbioru prac nie stwierdzono błędów w sztuce. Na podkreślenie zasługuję
+            perfekcyjna znajomość prac wykończeniowych oraz pełna dyspozycyjność.</p>
+            <p class="opinion-writer">Bogusław Łęcina</p>
+        </div>
       </div>
     </section>
 
@@ -217,14 +235,20 @@
     </section>
   </main>
 
-  <footer>
-    <span>
-      Made by Mikele Andżelo
-    </span>
-    <span>
-      Projekt i wykonanie: też mikele
-    </span>
+  <footer class="footer">
+    <div class="footer__container">
+      <p>
+        Made by Mikele Andżelo
+      </p>
+      <div class="footer__right-site">
+        <p>
+          Projekt i wykonanie: też mikele
+        </p>
+        <p>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a></p>
+      </div>
+    </div>
   </footer>
+
 </body>
 
 </html>
