feat: simple hamburger menu

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -22,6 +22,13 @@
       <div class="hero">
         <div class="hero__header">
           <img src="../assets/img/logo.svg" alt="" class="logo">
+
+          <button class="hamburger">
+            <span class="hamburger__box">
+              <span class="hamburger__inner"></span>
+            </span>
+          </button>
+
           <div class="hero__information">
             <div class="hero__information--items">
               <img class="hero__information--icon" src="../assets/img/home.svg" alt="home icon">
@@ -45,6 +52,7 @@
               </div>
             </div>
           </div>
+
         </div>
         <div class="hero-img__container">
           <img class="hero-img" src="../assets/img/hero-img.png" alt="">
@@ -181,20 +189,20 @@
       <h2 class="opinions__head">Opinie</h2>
       <div class="opinions__elements">
         <div class="opinions__item opinions__item-1">
-          <p class="opinion-1">Rekomendujemy firmę jako solidną, wiarygodną, terminową w branży budowlanej. Doświadczona
+          <p class="opinion">Rekomendujemy firmę jako solidną, wiarygodną, terminową w branży budowlanej. Doświadczona
             kadra oraz potencjał techniczny i organizacyjny gwarantują wysoki poziom wykonania usługi. Firma BudJanusz
             Budownictwo jest godna polecenia przy realizacji tego typu prac.</p>
             <p class="opinion-writer">Wspólnota Mieszkaniowa Nieruchomości</p>
         </div>
         <div class="opinions__item opinions__item-2">
-          <p class="opinion-2">Mieliśmy przyjemność współpracować z Firmą Budowalną BudJanusz. Zakres prac obejmował
+          <p class="opinion">Mieliśmy przyjemność współpracować z Firmą Budowalną BudJanusz. Zakres prac obejmował
             renowację i modernizację magazynów, zaplecza, kuchni oraz sali konsumpcyjnych w naszej Restauracji w
             kamienicy nr 55 na Starym Rynku w Poznaniu. W związku z powyższym możemy szczerze polecić Firmę BudJanusz
             jako rzetelnego kontrahenta.</p>
             <p class="opinion-writer">Restauracja Smacznie Rzeszów</p>
         </div>
         <div class="opinions__item opinions__item-3">
-          <p class="opinion-3">Firma Budowlana Janusza wykonała dla nas dom jednorodzinny. Wszystkie prace wykonana
+          <p class="opinion">Firma Budowlana Janusza wykonała dla nas dom jednorodzinny. Wszystkie prace wykonana
             fachowo i terminowo. Podczas odbioru prac nie stwierdzono błędów w sztuce. Na podkreślenie zasługuję
             perfekcyjna znajomość prac wykończeniowych oraz pełna dyspozycyjność.</p>
             <p class="opinion-writer">Bogusław Łęcina</p>
@@ -203,8 +211,10 @@
     </section>
 
     <section class="localization">
+      <div class="localization-text-container">
       <h2 class="localization__head">Pewnie zastanawiasz się gdzie nas znaleźć ;)</h2>
       <img class="localization__line" src="../assets/img/Line5.svg" alt="">
+    </div>
       <iframe class="localization__map"
         src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d6994.084690030229!2d22.7379766647145!3d50.36207183125831!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spl!2spl!4v1597950352451!5m2!1spl!2spl"
         frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
