feat: mobile style

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -88,7 +88,7 @@
     <section class="information-section">
       <article class="about">
         <h2 class="article-head">O nas</h2>
-        <img src="../assets/img/pasek.svg" alt="">
+        <img class="line" src="../assets/img/pasek.svg" alt="">
         <div class="article-container">
           <p class="about__paragraph">Bla bla bla działamy na rynku legancko tego. BudJanusz to firma
             remontowo-budowlana.
@@ -114,7 +114,7 @@
 
       <article>
         <h2 class="article-head">Remonty</h2>
-        <img src="../assets/img/pasek.svg" alt="">
+        <img class="line" src="../assets/img/pasek.svg" alt="">
         <div class="article-container">
           <div class="article-item">
             <h3 class="article__space">Łazienka</h3>
@@ -212,7 +212,7 @@
 
     <section class="localization">
       <div class="localization-text-container">
-      <h2 class="localization__head">Pewnie zastanawiasz się gdzie nas znaleźć ;)</h2>
+      <h2 class="localization__head">Lokalizacja</h2>
       <img class="localization__line" src="../assets/img/Line5.svg" alt="">
     </div>
       <iframe class="localization__map"
