--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -90,7 +90,7 @@
         <h2 class="article-head">O nas</h2>
         <img class="line" src="../assets/img/pasek.svg" alt="">
         <div class="article-container">
-          <p class="about__paragraph">Bla bla bla działamy na rynku legancko tego. BudJanusz to firma
+          <p class="about__paragraph">BudJanusz to firma
             remontowo-budowlana.
             Zajmujemy się kompleksowymi wykończeniami mieszkań, domów, lokali biurowych oraz remontowaniem i adaptacją
             pomieszczeń takich jak poddasza, piwnice oraz sutereny.
@@ -203,7 +203,7 @@
         </div>
         <div class="opinions__item opinions__item-3">
           <p class="opinion">Firma Budowlana Janusza wykonała dla nas dom jednorodzinny. Wszystkie prace wykonana
-            fachowo i terminowo. Podczas odbioru prac nie stwierdzono błędów w sztuce. Na podkreślenie zasługuję
+            fachowo i terminowo. Podczas odbioru prac nie stwierdzono żadnych szczecin. Na podkreślenie zasługuję
             perfekcyjna znajomość prac wykończeniowych oraz pełna dyspozycyjność.</p>
           <p class="opinion-writer">Bogusław Łęcina</p>
         </div>
@@ -221,42 +221,35 @@
     </section>
 
     <section class="contact">
-        <div class="hero__information--items">
-          <img class="hero__information--icon" src="../assets/img/home.svg" alt="home icon">
-          <div class="hero__information--item">
-            <p class="hero__information--item-heading">Adres</p>
-            <span>23-420 Tarnogród</span>
-          </div>
+      <div class="hero__information--items">
+        <img class="hero__information--icon" src="../assets/img/home.svg" alt="home icon">
+        <div class="hero__information--item">
+          <p class="hero__information--item-heading">Adres</p>
+          <span>23-420 Tarnogród</span>
         </div>
-        <div class="hero__information--items">
-          <img class="hero__information--icon" src="../assets/img/phone.svg" alt="">
-          <div class="hero__information--item ">
-            <p class="hero__information--item-heading">Telefon</p>
-            <span>123 456 789</span>
-          </div>
+      </div>
+      <div class="hero__information--items">
+        <img class="hero__information--icon" src="../assets/img/phone.svg" alt="">
+        <div class="hero__information--item ">
+          <p class="hero__information--item-heading">Telefon</p>
+          <span>123 456 789</span>
         </div>
-        <div class="hero__information--items">
-          <img class="hero__information--icon" src="../assets/img/mail.svg" alt="">
-          <div class="hero__information--item ">
-            <p class="hero__information--item-heading">E-mail</p>
-            <span>budowa@szybka.pl</span>
-          </div>
+      </div>
+      <div class="hero__information--items">
+        <img class="hero__information--icon" src="../assets/img/mail.svg" alt="">
+        <div class="hero__information--item ">
+          <p class="hero__information--item-heading">E-mail</p>
+          <span>budowa@szybka.pl</span>
         </div>
+      </div>
     </section>
 
   </main>
 
   <footer class="footer">
     <div class="footer__container">
-      <p>
-        Made by Mikele Andżelo
-      </p>
-      <div class="footer__right-site">
-        <p>
-          Projekt i wykonanie: też mikele
-        </p>
-        <p>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a></p>
-      </div>
+      <p>2020 © Michał Szeniak</p>
+      <p>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a></p>
     </div>
   </footer>
 
